--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 , "dependencies"   : {
                      }
 
-, "devDependencies": { "tap": "0.1.3"
+, "devDependencies": { "tap": "~0.4.12"
                      }
 
 , "main": "./api"
