--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 , "repository": { "type": "git"
                 , "url": "git://github.com/iriscouch/traceback" }
 , "engines": [ "node" ]
+, "scripts": { "test": "tap test/"
+             }
 
 , "dependencies"   : {
                      }
